Successful test parse of ldr file